[package]
name = "libaoc"
description = "Advent of Code CLI"
authors = ["Jordi Calafat <jcalafat97@gmail.com>"]
version = "0.1.55"
edition = "2021"
license = "MIT"
repository = "https://github.com/jocades/libaoc"
categories = ["command-line-utilities", "api-bindings"]
keywords = ["puzzle", "advent", "algorithm"]

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
html2text = "0.13.5"
reqwest = { version = "0.12.9", features = ["blocking"] }
scraper = "0.22.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
